change api response after creating survey
