# src/app/api/models.ts
@@ -1,6 +1,7 @@
 export { CreateSurveyQuestion } from './models/create-survey-question';
 export { CreateSurveyRequest } from './models/create-survey-request';
-export { ClientQuestion } from './models/client-question';
-export { ClientSurvey } from './models/client-survey';
+export { CreateSurveyResponse } from './models/create-survey-response';
 export { ClientAnswer } from './models/client-answer';
 export { ClientAnsweredQuestion } from './models/client-answered-question';
+export { ClientQuestion } from './models/client-question';
+export { ClientSurvey } from './models/client-survey';
