# src/app/api/services/survey-controller.service.ts
@@ -11,6 +11,7 @@ import { filter, map } from 'rxjs/operators';
 
 import { ClientSurvey } from '../models/client-survey';
 import { CreateSurveyRequest } from '../models/create-survey-request';
+import { CreateSurveyResponse } from '../models/create-survey-response';
 
 @Injectable({
   providedIn: 'root',
@@ -85,7 +86,7 @@ export class SurveyControllerService extends BaseService {
    */
   saveSurvey$Response(params: {
     body: CreateSurveyRequest;
-  }): Observable<StrictHttpResponse<ClientSurvey>> {
+  }): Observable<StrictHttpResponse<CreateSurveyResponse>> {
     const rb = new RequestBuilder(
       this.rootUrl,
       SurveyControllerService.SaveSurveyPath,
@@ -105,7 +106,7 @@ export class SurveyControllerService extends BaseService {
       .pipe(
         filter((r: any) => r instanceof HttpResponse),
         map((r: HttpResponse<any>) => {
-          return r as StrictHttpResponse<ClientSurvey>;
+          return r as StrictHttpResponse<CreateSurveyResponse>;
         }),
       );
   }
@@ -116,9 +117,14 @@ export class SurveyControllerService extends BaseService {
    *
    * This method sends `application/json` and handles request body of type `application/json`.
    */
-  saveSurvey(params: { body: CreateSurveyRequest }): Observable<ClientSurvey> {
+  saveSurvey(params: {
+    body: CreateSurveyRequest;
+  }): Observable<CreateSurveyResponse> {
     return this.saveSurvey$Response(params).pipe(
-      map((r: StrictHttpResponse<ClientSurvey>) => r.body as ClientSurvey),
+      map(
+        (r: StrictHttpResponse<CreateSurveyResponse>) =>
+          r.body as CreateSurveyResponse,
+      ),
     );
   }
 
